<?xml version="1.0"?>
<package>
  <name>livox_custom_msgs_ros1</name>
  <version>1.0.0</version>
  <description>Custom Livox messages for ROS 1</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>